Fri Sep 24 12:24:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Documented vc10, thanks to Paul Carter <pcarter at SCIRES dot COM>
          for reporting this.

Fri Sep 24 11:44:06 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
          Adjusted ACE::is_equal() comment to make fuzz happy.

Fri Sep 24 09:35:00 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * examples/C++NPv2/AIO_Client_Logging_Daemon.h:
          Removed code that is problematic for GCC 2.95.3 in a crossbuild
          for LynxOS 4.0.

Fri Sep 24 07:35:27 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
          Added a simple helper ACE::is_equal() which compares equality of two
          objects without using operator==. This is useful for comparing floating
          point values.

        * tests/OS_Test.cpp:
          Use ACE::is_equal() instead of local copy.

Thu Sep 23 16:14:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/SSL/ssl.mpc:
        * bin/MakeProjectCreator/config/pkgconfig.mpb:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/ace_install_pkgconfig.pl:
        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/wrapper_macros.GNU:

          Added support for installing pkg-config (.pc) files as part of the
          gnuace "make install".  This includes a refactoring of how the
          shared library version numbers are set internally in the makefiles.

Thu Sep 23 12:32:05 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Service_Gestalt.cpp:
          Fixed memory leak. Previously it could happen that svc_queue_ was
          allocated during processing of arguments but was not freed if
          application didn't call process_commandline_directives().

        * tests/Network_Adapters_Test.cpp:
          Removed non-ASCII character from the comments.

Wed Sep 22 18:42:25 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
